0.1-alpha3/_sources/gene/AGAP001350.rst.txt
:orphan:



AGAP001350
==========

Location: **2R:3,399,098-3,402,472**





External links:
`VectorBase <https://www.vectorbase.org/Anopheles_gambiae/Gene/Summary?g=AGAP001350>`_ |
`Ag1000G genome browser <https://www.malariagen.net/apps/ag1000g/phase1-AR3/index.html?genome_region=2R:3399098-3402472#genomebrowser>`_





Overlapping selection signals
-----------------------------

The following signals have a focus which overlaps this gene.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/IHS/BFS/2/2/index`
      - IHS
      - Burkina Faso *An. gambiae*
      - 2R:3,380,000-3,900,000
      - 635
      - 99.2%
      - Ace1
    * - :doc:`../signal/XPEHH/BFS.UGS/2/3/index`
      - XPEHH
      - Burkina Faso *An. gambiae*
      - 2R:3,260,000-3,600,000
      - 432
      - 90.3%
      - Ace1
    






Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/gene/AGAP001350';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


